--- a/lvl 1/dom-olympics-start/index.html
+++ b/lvl 1/dom-olympics-start/index.html
@@ -15,19 +15,19 @@
         <option value="theme-two">red/black</option>
     </select>
     <div id="main">
-        <button id='clearbtn'>clear</button>
+        <button id='clear'>clear</button>
         <button id="btn">Click For FUN</button>
         <div class="messages">
-            <div class="message left">
+            <div class="messageLeft">
                 I have something serious to talk about
             </div>
-            <div class="message right">
+            <div class="messageRight">
                 I don't want to talk
             </div>
-            <div class="message left">
+            <div class="messageLeft">
                 You have to, you're the police
             </div>
-            <div class="message right">
+            <div class="messageRight">
                 I'm just a simple farmer
             </div>
         </div>
@@ -36,7 +36,6 @@
             <button>Send</button>
         </form>
     </div>
-   
     <script src="index.js"></script>
 </body>
 </html>
