inline-Block method

--- a/lvl 1/colorGrid-inblock/main.html
+++ b/lvl 1/colorGrid-inblock/main.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="colors-box">
-        <!-- has the id also with the class to be able to style -->
+        <!-- has the id is also with the class to be able to apply style to everything at once instead of doing each one -->
         <div class ="color-box box1"></div>
         <div>
             <div class ="color-box box2"></div>
