--- a/lvl 2/Travel form/tra.html
+++ b/lvl 2/Travel form/tra.html
@@ -2,55 +2,48 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="tra.css">
-    <script src="tra.js"></script>
+    <title>Travel Form</title>
 </head>
 <body>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Travel</title>
-</head>
-<body>
-    <form class="airForm">
+    <h1>Welcome to TK Airlines!</h1>
+    <p>Please fill out the following form</p>
+    <form id="flight">
+        <input type="text" name="first-name">
         <label for="">First Name</label>
-        <input id="fName"type="text" name="firstName">
         <br>
+        <input type="text" name="last-name">
         <label for="">Last Name</label>
-        <input id="lName"type="text" name="lastName">
         <br>
+        <input type="digit" name="age">
         <label for="">Age</label>
-        <input id="age"type="digit" name="age">
-        <br>
+        <br><br>
+        <input type="radio" name="gender" value="male" id="male">
         <label for="male">Male</label>
-        <input id="male"type="radio" name="gender" value="male" id="male">
         <br>
+        <input type="radio" name="gender" value="female" id="female">
         <label for="female">Female</label>
-        <input id="female"type="radio" name="gender" value="female" id="female">
         <br>
-        <label for="location">Where are you going?</label>
-        <select name="location">
-            <option value="New York">New York</option>
-            <option value="Huston">Huston</option>
-            <option value="Kentucky">Kentucky</option>
+        <input type="radio" name="gender" value="other" id="other">
+        <label for="other">Meh..</label>
+        <br><br>
+        <select name="travelLocation">
+            <option value="here">Wendys</option>
+            <option value="there">Target</option>
+            <option value="overthere">Smoothie King</option>
         </select>
+        <label for="">Where are you going?</label>
+        <br><br>
+        <input class="diet" type="checkbox" name="vegetarian" id="vegetarian" value="vegetarian">
+        <label for="vegetarian">Vegetarian</label>
         <br>
-        <label for="diet">What is you Diet</label>
+        <input class="diet" type="checkbox" name="lactose" id="lactose" value="lactose-free">
+        <label for="lactose">Lactose-free</label>
         <br>
-        <input class="diet" type="checkbox" name="vegan" id="vegan" value="vegan">
-        <label for="vegan">Vegan</label>
-        <br>
-        <input class="diet" type="checkbox" name="kosher" id="kosher" value="kosher-free">
-        <label for="kosher">kosher</label>
-        <br>
-        <input class="diet" type="checkbox" name="lactose" id="lactose" value="lactose">
-        <label for="lactose">lactose</label>
-        <br>
-        <button type="button" id="submit">Submit</button>
-    </form>  
+        <input class="diet" type="checkbox" name="paleo" id="paleo" value="paleo">
+        <label for="paleo">Paleo, jk you eat what we give you!</label>
+        <br><br>
+        <button type="submit" id="submit">Submit</button>
+    </form>
+    <script src="tra.js"></script>
 </body>
 </html>
