--- a/lvl 2/zenGarden/zen.html
+++ b/lvl 2/zenGarden/zen.html
@@ -10,6 +10,7 @@
 <body>
 <div class="container">
  <header class="Top">
+    <img src="http://www.csszengarden.com/214/enso.svg">
         <h1>CSS ZEN Garden</h1>
         <h2>The Beauty of CSS design.</h2>
  </header>
