--- a/lvl 2/zenGarden/zen.html
+++ b/lvl 2/zenGarden/zen.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
     <link href="zen.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="img/enso.svg">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,103 +14,143 @@
 <body>
 <div class="container">
  <header class="Top">
-    <img src="http://www.csszengarden.com/214/enso.svg">
-        <h1>CSS ZEN Garden</h1>
-        <h2>The Beauty of CSS design.</h2>
+    <div class="block">
+        <img class= img1 src="http://www.csszengarden.com/214/enso.svg">
+         <div class="headerText">        
+             <h1>CSS ZEN Garden</h1>
+            <h2>The Beauty of CSS design.</h2>
+         </div> 
+    </div>        
  </header>
-
- <div class="cell-two">
-    <nav>
-    <a href="" id="twoA"></a>
-    <a id="viewDesigns">VIEW ALL DESIGNS</a>
-    <img src="https://bit.ly/3QHEcaO" alt="arrow-icon" id="arrow-icon"/>
-    </nav>
+ <div class="nav">
+    <h3>View All Designs</h3>
+    <h3>►</h3>
 </div>
 
 <ul id="list1">
-    <li>
-        <a href="#">Mid Century Modern</a><br>
-        by 
-        <a href="#">Andrew Lohman</a>
+    <li class="line">
+        <h3 href="#">Mid Century Modern</h3>
+        <p>by <a href="#">Andrew Lohman</a></p>
     </li>
-    <li>
-        <a href="#">Garments</a><br>
-        by 
-        <a href="#">Dan Mall</a>
+    <li class="line">
+        <h3 href="#">Garments</h3>
+        <p>by <a href="#">Dan Mall</a></p>
     </li>
-    <li>
-        <a href="#">Steel </a><br>
-        by 
-        <a href="#">Steffen Knoeller</a>
+    <li class="line">
+        <h3 href="#">Steel </h3>
+        <p>by<a href="#">Steffen Knoeller</a></p>
     </li>
-    <li>
-        <a href="#">Apothecary</a><br>
-        by
-        <a href="#">Trent Walton</a>
+    <li class="line">
+        <h3 href="#">Apothecary</h3>
+        <p>by<a href="#">Trent Walton</a></p>
     </li>
-    <li>
-        <a href="#">Screen Filler</a><br>
-        by 
-        <a href="#">Elliot Jay Stocks</a>
+    <li class="line">
+        <h3 href="#">Screen Filler</h3>
+        <p>by<a href="#">Elliot Jay Stocks</a></p>
     </li>
-    <li>
-        <a href="#">Fountain Kiss</a><br>
-        by 
-        <a href="#">Jeremy Carlson</a>
+    <li class="line">
+        <h3 href="#">Fountain Kiss</h3>
+        <p>by<a href="#">Jeremy Carlson</a></p>
     </li>
-    <li>
-        <a href="#">A Robot Named Jimmy</a><br>
-        by
-        <a href="#">meltmedia</a>
+    <li class="line">
+        <h3 href="#">A Robot Named Jimmy</h3>
+        <p>by<a href="#">meltmedia</a></p>
     </li>
-    <li>
-        <a href="#">Verde Moderna</a><br>
-        by
-        <a href="#">Dave Shea</a>
+    <li class="none">
+        <h3 href="#">Verde Moderna</h3>
+        <p>by<a href="#">Dave Shea</a></p>
     </li>
 </ul>
 <div class="par1">
     <p>A demonstration of what can be accomplished through CSS-based design. Select any style sheet from the list to load it into this page.</p>
-        <br><p>Download the example<a href>HTML FILE</a> and <a href>CSS FILE</a></p>
+    <br>
+    <p>Download the example<span class=" arrows"><span class="ab">⭳</span><a href="#">HTML FILE</a></span> and <span class=arrows><span class="ab">⭳</span><a href="#">CSS FILE</a></span></p>
     <h3>The Road to Enlightenment</h3>
-     <p>
-        Littering a dark and dreary road lay the past relics of browser-specific tags, incompatible DOMs, broken CSS support, and abandoned browsers.
-        We must clear the mind of the past. Web enlightenment has been achieved thanks to the tireless efforts of folk like the W3C, WaSP, and the major browser creators.
-        The CSS Zen Garden invites you to relax and meditate on the important lessons of the masters. Begin to see with clarity. Learn to use the time-honored techniques in new and invigorating fashion. Become one with the web
-    </p>
-</div>
-    <div class="par2">
-    <h1>So What is This About?</h1>
-    <p>
-        There is a continuing need to show the power of CSS. The Zen Garden aims to excite, inspire, and encourage participation. To begin, view some of the existing designs in the list. Clicking on any one will load the style sheet into this very page. The HTML remains the same, the only thing that has changed is the external CSS file. Yes, really.
-        CSS allows complete and total control over the style of a hypertext document. The only way this can be illustrated in a way that gets people excited is by demonstrating what it can truly be, once the reins are placed in the hands of those able to create beauty from structure. Designers and coders alike have contributed to the beauty of the web; we can always push it further.   
-    </p>
+    <p>Littering a dark and dreary road lay the past relics of browser-specific tags, 
+            incompatible DOMs, broken CSS support, and abandoned browsers.</p>
+    <p> We must clear the mind of the past. Web enlightenment has been achieved thanks 
+            to the tireless efforts of folk like the W3C, WaSP, and the major browser creators.</p>
+    <p>The CSS Zen Garden invites you to relax and meditate on the important lessons of the masters. Begin to see with clarity. Learn to use 
+            the time-honored techniques in new and invigorating fashion. Become one with the web</p>
+    <h3>So What is This About?</h3>
+    <p>There is a continuing need to show the power of CSS. The Zen Garden aims to excite, inspire, and encourage participation. To begin, view some of the existing designs in the list. 
+        Clicking on any one will load the style sheet into this very page. The HTML remains the same, 
+        the only thing that has changed is the external CSS file. Yes, really.</p>
+    <p>CSS allows complete and total control over the style of a hypertext document. The only way this can be illustrated in a way that gets people excited is by demonstrating what it can truly be, once the reins are placed in the hands of those able to create beauty from structure. Designers 
+            and coders alike have contributed to the beauty of the web; we can always push it further.</p>
     </div>
+    <div class= backdrop2></div>
     <div class="par3" >
-    <h1>Participation</h1>
-    <p>
-        Strong visual design has always been our focus. You are modifying this page, so strong CSS skills are necessary too, but the example files are commented well enough that even CSS novices can use them as starting points. Please see the CSS Resource Guide for advanced tutorials and tips on working with CSS.
-        You may modify the style sheet in any way you wish, but not the HTML. This may seem daunting at first if you've never worked this way before, but follow the listed links to learn more, and use the sample files as a guide.
-        Download the sample HTML and CSS to work on a copy locally. Once you have completed your masterpiece (and please, don't submit half-finished work) upload your CSS file to a web server under your control. Send us a link to an archive of that file and all associated assets, and if we choose to use it we will download it and place it on our server   
+    <h3>Participation</h3>
+    <p>Strong visual design has always been our focus. You are modifying this page, so strong CSS skills are necessary too, but the example files are commented well enough that even CSS novices can use them as starting points. 
+        Please see the <span> <a href="#"> CSS Resource Guide</a></span> for advanced tutorials and tips on working with CSS.</p>
+    <p>You may modify the style sheet in any way you wish, but not the HTML. This may seem daunting at first if you've never 
+        worked this way before, but follow the listed links to learn more, and use the sample files as a guide.</p>
+    <p>Download the sample <span><a href="#">HTML</a></span> and <span><a href="#">
+        CSS</a></span> to work on a copy locally. Once you have completed your masterpiece (and please, don't submit half-finished work) upload your CSS file to a web server under your control. 
+        <span><a href="#">Send us a link</a></span> to an archive of that file and all associated assets, and if we choose to use it we will download it and place it on our server   
     </p>
-    <h1>Benefits</h1>
+    <h3>Benefits</h3>
     <P>
-        Why participate? For recognition, inspiration, and a resource we can all refer to showing people how amazing CSS really can be. This site serves as equal parts inspiration for those working on the web today, learning tool for those who will be tomorrow, and gallery of future techniques we can all look forward to.
+        Why participate? For recognition, inspiration, and a resource we can all refer to showing people 
+        how amazing CSS really can be. This site serves as equal parts inspiration for those working on the web today, 
+        learning tool for those who will be tomorrow, and gallery of future techniques we can all look forward to.
     </P>
     </div>
+    <div class="sideLinks">
+        <div>
+          <h3 id="linetop">VIEW THIS DESIGN’S CSS</h3>
+        </div>
+        <div>
+          <h3>CSS RESOURCES</h3>
+        </div>
+        <div>
+          <h3>FAQ</h3>
+        </div>
+        <div>
+          <h3>SUBMIT A DESIGN</h3>
+        </div>
+        <div>
+          <h3 class="last">TRANSLATIONS</h3>
+        </div>
+    </div>
+    <div class="backdrop4"></div>
     <div class="par4" >
-    <h1>Requirements</h1>
-    <P>
-        Where possible, we would like to see mostly CSS 1 & 2 usage. CSS 3 & 4 should be limited to widely-supported elements only, or strong fallbacks should be provided. The CSS Zen Garden is about functional, practical CSS and not the latest bleeding-edge tricks viewable by 2% of the browsing public. The only real requirement we have is that your CSS validates.
-        Luckily, designing this way shows how well various browsers have implemented CSS by now. When sticking to the guidelines you should see fairly consistent results across most modern browsers. Due to the sheer number of user agents on the web these days — especially when you factor in mobile — pixel-perfect layouts may not be possible across every platform. That's okay, but do test in as many as you can. Your design should work in at least IE9+ and the latest Chrome, Firefox, iOS and Android browsers (run by over 90% of the population).
-        We ask that you submit original artwork. Please respect copyright laws. Please keep objectionable material to a minimum, and try to incorporate unique and interesting visual themes to your work. We’re well past the point of needing another garden-related design.
-        This is a learning exercise as well as a demonstration. You retain full copyright on your graphics (with limited exceptions, see submission guidelines), but we ask you release your CSS under a Creative Commons license identical to the one on this site so that others may learn from your work
-    </P>
+    <h3>Requirements</h3>
+    <P>Where possible, we would like to see mostly CSS 1 & 2 usage. CSS 3 & 4 should be limited to widely-supported elements only, or strong fallbacks should be provided. The CSS Zen Garden is about functional, practical CSS and not the latest bleeding-edge tricks 
+        viewable by 2% of the browsing public. The only real requirement we have is that your CSS validates.</P>
+    <p>Luckily, designing this way shows how well various browsers have implemented CSS by now. When sticking to the guidelines you should see fairly consistent results across most modern browsers. Due to the sheer number of user agents on the web these days — especially when you factor in mobile — pixel-perfect 
+        layouts may not be possible across every platform. That's okay, 
+        but do test in as many as you can. Your design should work in at least IE9+ and the latest Chrome, Firefox, iOS and Android browsers (run by over 90% of the population).</p>
+    <p>We ask that you submit original artwork. Please respect copyright laws. Please keep objectionable material to a minimum, and try to incorporate unique 
+        and interesting visual themes to your work. We’re well past the point of needing another garden-related design.</p>
+    <p>This is a learning exercise as well as a demonstration. You retain full copyright on your graphics (with limited exceptions, <span><a href="#" target="_blank">submission guidelines</a></span>), but we ask you release your CSS under a Creative Commons 
+        license identical to the one <span> <a href="#">one on this site</a></span> so that others may learn from your work</P>
     </div>
     <div class="par5">
-        By Dave Shea. Bandwidth graciously donated by mediatemple. Now available: Zen Garden, the book.
+        <h3>By <span><a href="#">Dave Shea</a></span>. Bandwidth graciously donated by <span><a
+            href="#">mediatemple</a></span>. Now available: <span> <a href="#">Zen Garden,<br>the book</a>
+        </span>.</h3>
     </div>
+    <footer>
+        <div class="icons">
+            <div> 
+                <a href="#"><img  class="img3"src="http://cdn.onlinewebfonts.com/svg/img_43757.png"/></a>
+            </div>
+            <div> 
+                <a href="#"><img  class="img3"src="https://cdn-icons-png.flaticon.com/512/25/25462.png"/></a>
+            </div>
+            <div> 
+                <a href="#"><img  class="img3"src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Cc.logo.circle.svg/1200px-Cc.logo.circle.svg.png"/></a> 
+            </div>
+            <div> 
+                <a href="#"><img  class="img3"src="https://cdn.icon-icons.com/icons2/2248/PNG/512/wheelchair_accessibility_icon_137024.png"/></a>
+            </div>
+            <div> 
+                <a href="#"><img  class="img3"src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/2048px-Octicons-mark-github.svg.png"/></a>
+            </div>
+        </div>
+      </footer>
 </div>
 </body>
-<script src="zen.js"></script>
 </html>
