--- a/lvl 2/axios-todo/axios.html
+++ b/lvl 2/axios-todo/axios.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo List</title>
 </head>
 <body>
-    <form name="ToDo">
-        <input name="title" placeholder="Title"/>
-        <input name="description" placeholder="Description"/>
-        <input name="imgUrl" placeholder="Image Url"/>
-        <button>Submit</button>
+<header>
+    <h1>Axios ToDo List</h1>
+</header>
+
+    <form name="todo">
+        <input type = "text" name="title" placeholder="Title"/>
+        <input type = "text" name="description" placeholder="Description"/>
+        <input id="imgUrl" type = "text" name="imgUrl" placeholder="imgUrl"/>
+        <input type = "number" name ="price" placeholder="Price"/>
+        <button id="mainBnt">Submit</button>
+     <!-- <make a reset button to clear in put> -->
     </form>
-
-
-
+<div class="list">
+</div>
 
       <!-- Axios CDN -->
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="axios"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js" integrity="sha512-zJYu9ICC+mWF3+dJ4QC34N9RA0OVS1XtPbnf6oXlvGrLGNB8egsEzu/5wgG90I61hOOKvcywoLzwNmPqGAdATA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="axios.js"></script>
+    <link href="axios.css" rel ='stylesheet'/>
 </body>
 </html>
