--- a/lvl 2/zenGarden/zen.html
+++ b/lvl 2/zenGarden/zen.html
@@ -146,6 +146,7 @@
             <div> 
                 <a href="#"><img  class="img3"src="https://cdn.icon-icons.com/icons2/2248/PNG/512/wheelchair_accessibility_icon_137024.png"/></a>
             </div>
+            <!-- /img/wheelchair.png -->
             <div> 
                 <a href="#"><img  class="img3"src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/2048px-Octicons-mark-github.svg.png"/></a>
             </div>
